Fix: NFT Gallery | Alignment control

--- a/src/css/view/nft-gallery.scss
+++ b/src/css/view/nft-gallery.scss
@@ -89,6 +89,18 @@
       }
     }
 
+    .eael-nft-gallery-button-align-left {
+      margin-right: auto;
+    }
+
+    .eael-nft-gallery-button-align-center {
+      margin: auto;
+    }
+
+    .eael-nft-gallery-button-align-right {
+      margin-left: auto;
+    }
+
     .eael-nft-button {
       button {
         background-color: transparent;
